--- a/templates/index.html
+++ b/templates/index.html
@@ -186,6 +186,12 @@
                 <label for="hasGuestRoom">hasGuestRoom:</label>
                 <input type="number" step="any" name="hasGuestRoom" required>
             </div>
+
+            <div class="form-group">
+                <label for="category">Category(Luxury: 0, Basic: 1):</label>
+                <input type="number" step="any" name="category" required>
+            </div>
+
             <div class="form-group">
                 <label for="model">Chọn mô hình:</label>
                 <select name="model" required>
